--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <ul>
           <li><a href="#home">Home</a></li>
           <li><a href="#services">Services</a></li>
-          <li><a href="#testimonials">Testimonials</a></li>
+          <li><a href="#case-studies">Case Studies</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
@@ -198,7 +198,7 @@
 
     <!-- Copyright -->
     <div class="footer-bottom">
-      <p>&copy; 2023 CyberAsist Technologies. All rights reserved.</p>
+      <p>&copy; 2024 CyberAsist Technologies. All rights reserved.</p>
     </div>
   </footer>
 
