--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         <div class="social-links">
           <a href="https://facebook.com" target="_blank" class="social-icon" rel="noopener">📘</a>
           <a href="https://twitter.com" target="_blank" class="social-icon" rel="noopener">🐦</a>
-          <a href="https://linkedin.com" target="_blank" class="social-icon" rel="noopener">🔗</a>
+          <a href="https://www.linkedin.com/company/cyberasist-technology" target="_blank" class="social-icon" rel="noopener">🔗</a>
           <a href="https://instagram.com" target="_blank" class="social-icon" rel="noopener">📸</a>
         </div>
       </div>
