--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
           <a href="https://facebook.com" target="_blank" class="social-icon" rel="noopener">📘</a>
           <a href="https://twitter.com" target="_blank" class="social-icon" rel="noopener">🐦</a>
           <a href="https://www.linkedin.com/company/cyberasist-technology" target="_blank" class="social-icon" rel="noopener">🔗</a>
-          <a href="https://instagram.com" target="_blank" class="social-icon" rel="noopener">📸</a>
+          <a href="https://www.instagram.com/cyberassisttechnologies?igsh=MWR5eWluNjg4cGI0ZA==" target="_blank" class="social-icon" rel="noopener">📸</a>
         </div>
       </div>
 
