--- a/index.html
+++ b/index.html
@@ -143,6 +143,11 @@
         <span class="underline"></span>
       </div>
       <div class="form-group">
+        <input type="subject" id="subject" name="subject" required>
+        <label for="subject">Subject</label>
+        <span class="underline"></span>
+      </div>
+      <div class="form-group">
         <textarea id="message" name="message" rows="5" required></textarea>
         <label for="message">Your Message</label>
         <span class="underline"></span>
@@ -161,6 +166,7 @@
           <li><a href="#home">Home</a></li>
           <li><a href="#services">Services</a></li>
           <li><a href="#case-studies">Case Studies</a></li>
+          <li><a href="#blogs">Blogs</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
