--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <li><a href="#home" class="nav-link">Home</a></li>
         <li><a href="#services" class="nav-link">Services</a></li>
         <li><a href="#case-studies" class="nav-link">Case Studies</a></li>
+        <li><a href="#blogs" class="nav-link">Blogs</a></li>
         <li><a href="#contact" class="nav-link">Contact</a></li>
       </ul>
       <div class="menu-toggle" id="mobile-menu">
