--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
       <div class="footer-section">
         <h3>Follow Us</h3>
         <div class="social-links">
-          <a href="https://facebook.com" target="_blank" class="social-icon" rel="noopener">📘Facebook</a>
+          <a href="https://www.facebook.com/share/1A9to6JDEa" target="_blank" class="social-icon" rel="noopener">📘Facebook</a>
 <!--           <a href="https://twitter.com" target="_blank" class="social-icon" rel="noopener">🐦</a> -->
           <a href="https://www.linkedin.com/company/cyberasist-technology" target="_blank" class="social-icon" rel="noopener">🔗LinkdIn</a>
           <a href="https://www.instagram.com/cyberassisttechnologies?igsh=MWR5eWluNjg4cGI0ZA==" target="_blank" class="social-icon" rel="noopener">📸Instagram</a>
